Controller and Updated Permission issue